--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -5,21 +5,18 @@
 
 // 01 - helpers
 @import './01-helpers/variables.scss';
-@import './01-helpers/breakpoints.scss';
-@import './01-helpers/mixins.scss';
-@import './01-helpers/functions.scss';
 
 // 02 - basic
 @import './02-basic/base.scss';
 @import './02-basic/typography.scss';
-@import './02-basic/grid.scss';
-@import './02-basic/utilities.scss';
 
 // 03 - layout
+@import './03-layout/main.scss';
+@import './03-layout/output.scss';
 @import './03-layout/footer.scss';
 
 // 04 - modules
 @import './04-modules/buttons.scss';
+@import './04-modules/form.scss';
 
 // 05 - pages
-@import './05-pages/about.scss';
