Made responsive, added documentation in CoffeeScript and added favicon to the project

--- a/src/scss/03-layout/output.scss
+++ b/src/scss/03-layout/output.scss
@@ -4,6 +4,11 @@
   justify-content: flex-start;
   width: 100%;
 
+  @media screen and (max-width: 950px) {
+    max-width: 450px;
+    margin: 0 auto;
+  }
+
   input {
     text-align: center;
     width: 80%;
