--- a/src/scss/02-basic/base.scss
+++ b/src/scss/02-basic/base.scss
@@ -1,7 +1,7 @@
 body {
-  height: 100%;
+  height: 100vh;
   width: 100vw;
-  min-height: 100vh;
+  min-height: 780px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -10,6 +10,10 @@ body {
   font-size: 16px;
   line-height: 150%;
   position: relative;
+
+  @media screen and (max-width: 600px) {
+    justify-content: flex-start;
+  }
 }
 
 main,
