--- a/src/scss/02-basic/typography.scss
+++ b/src/scss/02-basic/typography.scss
@@ -14,6 +14,10 @@ h1 {
     width: 14px;
     background-color: $primary-color;
     border-radius: 20px;
+
+    @media screen and (max-width: 950px) {
+      display: none;
+    }
   }
 }
 
