--- a/src/scss/03-layout/main.scss
+++ b/src/scss/03-layout/main.scss
@@ -6,6 +6,15 @@ main {
   & > div {
     width: 50%;
   }
+
+  @media screen and (max-width: 950px) {
+    flex-direction: column;
+    padding: 32px 16px;
+
+    & > div {
+      width: 100%;
+    }
+  }
 }
 
 .img {
@@ -15,14 +24,28 @@ main {
     width: 90%;
     height: auto;
   }
+
+  @media screen and (max-width: 950px) {
+    max-width: 250px;
+    margin-bottom: 32px;
+  }
 }
 
 .text {
   padding-left: 1rem;
   padding-right: 15%;
+
+  @media screen and (max-width: 950px) {
+    padding: 0;
+    text-align: center;
+  }
 }
 
 .btn-container {
   text-align: center;
   margin-bottom: 60px;
+
+  @media screen and (max-width: 950px) {
+    margin-bottom: 24px;
+  }
 }
