--- a/src/scss/04-modules/form.scss
+++ b/src/scss/04-modules/form.scss
@@ -4,6 +4,18 @@
   justify-content: flex-start;
   margin-bottom: 32px;
 
+  @media screen and (max-width: 950px) {
+    justify-content: center;
+  }
+
+  @media screen and (max-width: 500px) {
+    flex-direction: column;
+
+    & > div:first-of-type {
+      margin-bottom: 8px;
+    }
+  }
+
   label {
     font-size: 20px;
 
